@@ -1,3 +1,7 @@
+2021-02-02 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Improve validation of "children" property, resolves #147
+
 2021-02-01 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Allow for multiple validation messages per property, resolves #151
